[tool.poetry]
name = "cryptography"
version = "0.1.0"
description = ""
authors = ["Jaska-ITishnik <jasurbekbekmirzayev2004@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
